--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
     body { font-family: 'Segoe UI', Arial, sans-serif; padding: 20px; background: #f0f4f8; text-align: center; }
     .container { max-width: 600px; margin: auto; background: white; padding: 25px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
-    h2 { color: #2e6da4; margin-bottom: 20px; border-bottom: 2px solid #2e6da4; pb: 10px; }
+    h2 { color: #2e6da4; margin-bottom: 20px; border-bottom: 2px solid #2e6da4; padding-bottom: 10px; }
     label { display: block; text-align: left; margin: 10px 0 5px; font-weight: bold; color: #444; }
     select, input, button { padding: 12px; margin-bottom: 10px; width: 100%; border: 1px solid #ccc; border-radius: 6px; box-sizing: border-box; }
     button { background: #2e6da4; color: white; cursor: pointer; font-weight: bold; border: none; font-size: 16px; transition: 0.3s; }
@@ -116,7 +116,7 @@ const results = [
 {c:"2nd",n:"Ayan Majeed",p:"Ab Majeed Lone",sub:["Nazirah Tajweed","Seerat Mubadiyat"],marks:[33,15],maxTotal:100},
 
 // ===== 3rd Class =====
-{c:"3rd", n:"Ahtisham-ul-Haq", p:"Fayaz Ah Gojree", sub:["Nazirah","Seerat","Mubadiyat"], marks:[36,50,-1], maxTotal:100},
+{c:"3rd", n:"Ahtisham-ul-Haq", p:"Fayaz Ah Gojree", sub:["Nazirah","Seerat","Mubadiyat"], marks:[36,50,0], maxTotal:100},
 {c:"3rd", n:"Fatima Feroz", p:"Feroz Ah Bhat", sub:["Nazirah","Seerat","Mubadiyat"], marks:[37,48,0], maxTotal:100},
 {c:"3rd", n:"Sabeena Jan", p:"M. Akbar Mir", sub:["Nazirah","Seerat","Mubadiyat"], marks:[45,40,0], maxTotal:100},
 {c:"3rd", n:"Faiq-ul-Islam", p:"Parvaiz Ah Bhat", sub:["Nazirah","Seerat","Mubadiyat"], marks:[36,49,0], maxTotal:100},
@@ -194,7 +194,7 @@ const results = [
 {c:"7th", n:"Junaid-ul-Islam", p:"Shabir Ah. Hajam", sub:["Fehmi-Quran","Nazirah","Seerat","Mubadiyat","Tajweed"], marks:[19,30,17,28,19], maxTotal:250},
 
 // ===== 8th Class =====
-{c:"8th", n:"Mariya Arif", p:"M. Arif Khan", sub:["Fahm-e-Quran","Fahm-e-Hadees"], marks:[47,49], maxTotal:100},
+{c:"8th", n:"Mariya Arif", p:"M Arif Khan", sub:["Fahm-e-Quran","Fahm-e-Hadees"], marks:[47,49], maxTotal:100},
 
 // ===== 10th Class =====
 {c:"10th", n:"Faheem Sultan", p:"Md Sultan Khawaja", sub:["Fahm-e-Quran","Fahm-e-Hadees"], marks:[7,21], maxTotal:100},
@@ -229,4 +229,4 @@ function findResult(){
       const status = percent >= 33 ? "<span class='pass'>PASS</span>" : "<span class='fail'>FAIL</span>";
 
       let html = `<div class='student-info'><strong>Name:</strong> ${f.n} | <strong>Parent:</strong> ${f.p}</div>`;
-      html += `<table><t
+      html += 
