Add examination incharge section to index.html

--- a/index.html
+++ b/index.html
@@ -238,6 +238,17 @@ function searchResult() {
                     ${marksRows}
                     <tr style="background:#eee"><td><strong>Total</strong></td><td><strong>${found.t}/${found.max}</strong></td></tr>
                 </table>
+                 <div style="margin-top: 40px; display: flex; justify-content: flex-end; padding-right: 20px; text-align: center;">
+                    <div>
+                        <div style="font-family: 'Brush Script MT', cursive; font-size: 30px; color: #1a4a73; margin-bottom: -10px;">
+                            Aazad Sb
+                        </div>
+                        <div style="border-top: 1px solid #333; width: 180px; padding-top: 5px; font-weight: bold; font-size: 14px; color: #333;">
+                            Examination Incharge
+                        </div>
+                    </div>
+                </div>
+ 
                 <button class="no-print" style="background:#28a745; margin-top:15px;" onclick="window.print()">Print / Download PDF</button>
             </div>`;
     } else {
