--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@ const students = [
     {c:"8th", n:"Mariya Arif", p:"M Arif khan", m:[47, 49], t:96, max:100, sub:["Fahm-e-Quran", "Fahm-e-Hadees"]},
 
     // CLASS 10th
-    {c:"10th", n:"Faheem Sultan", p:"Md Sultan Khoja", m:[7, 21], t:28, max:100, sub:["Fahm-e-Quran", "Fahm-e-Hadees"]},
-    {c:"10th", n:"Murtaza Bashir", p:"Bashir Ah. Khoja", m:[20, 26], t:46, max:100, sub:["Fahm-e-Quran", "Fahm-e-Hadees"]},
+    {c:"10th", n:"Faheem Sultan", p:"Md Sultan Khawaja", m:[7, 21], t:28, max:100, sub:["Fahm-e-Quran", "Fahm-e-Hadees"]},
+    {c:"10th", n:"Murtaza Bashir", p:"Bashir Ah. Khawaja", m:[20, 26], t:46, max:100, sub:["Fahm-e-Quran", "Fahm-e-Hadees"]},
     {c:"10th", n:"Zuhaib Ah. Mir", p:"Bashir Ah. Mir", m:[15, 23], t:38, max:100, sub:["Fahm-e-Quran", "Fahm-e-Hadees"]}
 ];
 
