--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@ function smartClean(t) { return t ? t.toLowerCase().trim().replace(/\bmohammad\b
 
 const subjects1to3 = ["Nazirah + Tajweed", "Seerat + Mubadiyat"];
 const subjects4to5 = ["Nazirah", "Seerat", "Mubadiyat", "Tajveed"];
-const subjects6to7 = ["Nazirah", "Seerat", "Mubadiyat", "Fehmi-Quran", "Tajveed"];
-
+const subjects6th = ["Nazirah", "Seerat", "Mubadiyat", "Fehmi-Quran", "Tajveed"];
+const subjects7th = ["Fahm-e-Quran", "Nazirah", "Seerat", "Mubadiyat", "Tajweed"];
+    
 const students = [
-    // Sabhi Classes ka data yahan hai (Previous code se copy-pasted)
+    // Sabhiconst subjects6to7 = ["Nazirah", "Seerat", "Mubadiyat", "Fehmi-Quran", "Tajveed"]; Classes ka data yahan hai (Previous code se copy-pasted)
     {c:"1st", n:"Aisha Shabir", p:"Shabir Ah Mir", m:[50, 50], t:100, max:100, sub:subjects1to3},
     {c:"1st", n:"Anam-ul-Haq", p:"Fayaz Ah Gojree", m:[35, 50], t:85, max:100, sub:subjects1to3},
     {c:"1st", n:"Irfan Arif", p:"M. Arif Khan", m:[20, 49], t:69, max:100, sub:subjects1to3},
