Fix spelling of 'Faiyaz' to 'Fayaz' in index.html

--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@ const students = [
     {c:"5th", n:"Khawaja Sohail", p:"M. Sultan Khawaja", m:[40, 44, 24, 10], t:118, max:200, sub:subjects4to5},
     {c:"5th", n:"Adnan Mushtaq", p:"Mushtaq Ah. War", m:[37, 32, 23, 13], t:105, max:200, sub:subjects4to5},
     {c:"5th", n:"Muqadas Majeed", p:"Ab. Majeed Mir", m:[35, 34, 20, 6], t:95, max:200, sub:subjects4to5},
-    {c:"5th", n:"Zeeshan Faiyaz", p:"Faiyaz Ah. Shaikh", m:[13, 22, 16, 21], t:72, max:200, sub:subjects4to5},
+    {c:"5th", n:"Zeeshan Fayaz", p:"Fayaz Ah. Shaikh", m:[13, 22, 16, 21], t:72, max:200, sub:subjects4to5},
     {c:"5th", n:"Kashiful Haq", p:"Javid Ah. Bhat", m:[23, 26, 14, 9], t:72, max:200, sub:subjects4to5},
     {c:"5th", n:"Suhaib Shahzad", p:"Shahzad Ah. Lone", m:[38, 40, 25, 14], t:117, max:200, sub:subjects4to5},
-    {c:"5th", n:"Najmus Sehr", p:"Faiyaz Ah. Malik", m:[42, 44, 48, 40], t:174, max:200, sub:subjects4to5},
-    {c:"5th", n:"Tajamul Islam", p:"Faiyaz Ah. Malik", m:[43, 36, 46, 37], t:162, max:200, sub:subjects4to5},
+    {c:"5th", n:"Najmus Sehr", p:"Fayaz Ah. Malik", m:[42, 44, 48, 40], t:174, max:200, sub:subjects4to5},
+    {c:"5th", n:"Tajamul Islam", p:"Fayaz Ah. Malik", m:[43, 36, 46, 37], t:162, max:200, sub:subjects4to5},
     {c:"5th", n:"Sadiya Jan", p:"Javid Ah. Bhat", m:[27, 28, 19, 15], t:89, max:200, sub:subjects4to5},
     {c:"5th", n:"Sufiya Shabir", p:"Shabir Ah. Mir", m:[33, 38, 36, 29], t:136, max:200, sub:subjects4to5},
     {c:"5th", n:"Sabia Shabir", p:"Shabir Ah. Mir", m:[46, 40, 41, 32], t:159, max:200, sub:subjects4to5},
     {c:"5th", n:"Mohsin Manzoor", p:"Manzoor Ah. Mir", m:[16, 30, 14, 16], t:76, max:200, sub:subjects4to5},
     {c:"5th", n:"Imran Farooq", p:"Farooq Ah. Sheikh", m:[37, 30, 21, 10], t:98, max:200, sub:subjects4to5},
-    {c:"5th", n:"Rahil Faiyaz", p:"Faiyaz Ah. Mir", m:[0, 14, 0, 4], t:18, max:200, sub:subjects4to5},
+    {c:"5th", n:"Kamran Fayaz", p:"Fayaz Ah. Mir", m:[0, 14, 0, 4], t:18, max:200, sub:subjects4to5},
     {c:"5th", n:"Faizan Manzoor", p:"Manzoor Ah. Bhat", m:[40, 34, 24, 25], t:123, max:200, sub:subjects4to5},
     {c:"5th", n:"Ayman Arif", p:"Aarif Hussain Khan", m:[41, 48, 45, 48], t:182, max:200, sub:subjects4to5},
     {c:"5th", n:"Uzair Bilal", p:"Bilal Ah. Bhat", m:[38, 34, 20, 15], t:107, max:200, sub:subjects4to5},
@@ -175,9 +175,9 @@ const students = [
     {c:"6th", n:"Tazeem Bashir Mir", p:"Bashir Ah. Mir", m:[38, 12, 16, 10, 4], t:80, max:250, sub:subjects6th},
     {c:"6th", n:"Saifullah Mir", p:"Bashir Ah. Mir", m:[44, 14, 23, 23, 15], t:119, max:250, sub:subjects6th},
     {c:"6th", n:"Shahzad Parvaiz", p:"Parvaiz Ah. Bhat", m:[32, 44, 34, 41, 30], t:181, max:250, sub:subjects6th},
-    {c:"6th", n:"Shahzab Shabir", p:"Shabir Ah. Para", m:[37, 40, 32, 35, 18], t:162, max:250, sub:subjects6th},
+    {c:"6th", n:"Shahzaib Shabir", p:"Shabir Ah. Para", m:[37, 40, 32, 35, 18], t:162, max:250, sub:subjects6th},
     {c:"6th", n:"Tabasum Nazir", p:"Nazir Ah Sheikh", m:[41, 44, 24, 28, 13], t:150, max:250, sub:subjects6th},
-    {c:"6th", n:"Tahmuna Feroz", p:"Feroz Ah Lone", m:[43, 43, 40, 44, 20], t:190, max:250, sub:subjects6th},
+    {c:"6th", n:"Tahmina Feroz", p:"Feroz Ah Lone", m:[43, 43, 40, 44, 20], t:190, max:250, sub:subjects6th},
 
     // CLASS 7th (Subject sequence: Fahm-e-Quran, Nazirah, Seerat, Mubadiyat, Tajweed)
     {c:"7th", n:"Kamran Mushtaq", p:"Mushtaq Ah. Khaja", m:[42, 40, 18, 16, 37], t:153, max:250, sub:subjects7th},
@@ -190,8 +190,8 @@ const students = [
     {c:"8th", n:"Mariya Arif", p:"M Arif khan", m:[47, 49], t:96, max:100, sub:subjectsSenior},
 
     // CLASS 10th
-    {c:"10th", n:"Faheem Sultan", p:"Md Sultan Khoja", m:[7, 21], t:28, max:100, sub:subjectsSenior},
-    {c:"10th", n:"Murtaza Bashir", p:"Bashir Ah. Khoja", m:[20, 26], t:46, max:100, sub:subjectsSenior},
+    {c:"10th", n:"Faheem Sultan", p:"Md Sultan Khawaja", m:[7, 21], t:28, max:100, sub:subjectsSenior},
+    {c:"10th", n:"Murtaza Bashir", p:"Bashir Ah. Khawaja", m:[20, 26], t:46, max:100, sub:subjectsSenior},
     {c:"10th", n:"Zuhaib Ah. Mir", p:"Bashir Ah. Mir", m:[15, 23], t:38, max:100, sub:subjectsSenior}
 ];
 
