Fix spelling of names in student records

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ const students = [
     {c:"1st", n:"Farhan Rasheed", p:"Ab Rasheed Mir", m:[49, 35], t:84, max:100, sub:subjects1to3},
     {c:"1st", n:"Iram Mukhtiyar", p:"Mukhtiyar Ah Khan", m:[32, 48], t:80, max:100, sub:subjects1to3},
     {c:"1st", n:"Afan Ashraf", p:"M. Ashraf Mir", m:[47, 28], t:75, max:100, sub:subjects1to3},
-    {c:"1st", n:"Ab Wajid Bhat", p:"Towseef Ah Bhat", m:[12, 45], t:57, max:100, sub:subjects1to3},
+    {c:"1st", n:"Ab Wajid Bhat", p:"Tawseef Ah Bhat", m:[12, 45], t:57, max:100, sub:subjects1to3},
     {c:"1st", n:"Usman Aijaz", p:"Aijaz Ah Khan", m:[40, 43], t:83, max:100, sub:subjects1to3},
     {c:"1st", n:"Kulsama Irshad", p:"Irshad Ah Bhat", m:[39, 45], t:84, max:100, sub:subjects1to3},
     {c:"1st", n:"Ayan Masood", p:"Masood Ah Mir", m:[24, 43], t:67, max:100, sub:subjects1to3},
@@ -70,7 +70,7 @@ const students = [
     {c:"1st", n:"Abrar Jahangir", p:"Jahangir Ah Bhat", m:[35, 28], t:63, max:100, sub:subjects1to3},
     {c:"1st", n:"Zayan Masood", p:"Masood Ah Mir", m:[33, 30], t:63, max:100, sub:subjects1to3},
     {c:"1st", n:"Haidar Bilal", p:"Bilal Al Mir", m:[9, 33], t:42, max:100, sub:subjects1to3},
-    {c:"1st", n:"Ab Wahid", p:"Towseef Al Bhat", m:[29, 25], t:54, max:100, sub:subjects1to3},
+    {c:"1st", n:"Ab Wahid", p:"Tawseef Al Bhat", m:[29, 25], t:54, max:100, sub:subjects1to3},
     {c:"1st", n:"Muneeb Khawaja", p:"Javaid Ah Khawaja", m:[38, 35], t:73, max:100, sub:subjects1to3},
     {c:"1st", n:"Azim Jameel", p:"Jameel Ah Mir", m:[17, 33], t:50, max:100, sub:subjects1to3},
     {c:"1st", n:"Aman Sultan", p:"M. Sultan Khawaja", m:[21, 28], t:49, max:100, sub:subjects1to3},
@@ -183,7 +183,7 @@ const students = [
     {c:"7th", n:"Kamran Mushtaq", p:"Mushtaq Ah. Khaja", m:[42, 40, 18, 16, 37], t:153, max:250, sub:subjects7th},
     {c:"7th", n:"Hamid Naseer", p:"Naseer Ah. Khawaja", m:[12, 40, 48, 29, 15], t:144, max:250, sub:subjects7th},
     {c:"7th", n:"Seerat Khursheed", p:"Khursheed Ah. Bhat", m:[45, 48, 46, 39, 37], t:215, max:250, sub:subjects7th},
-    {c:"7th", n:"Soliha Jan", p:"Fayaz Ah. Gojree", m:[47, 47, 48, 39, 39], t:220, max:250, sub:subjects7th},
+    {c:"7th", n:"Soliyah Jan", p:"Fayaz Ah. Gojree", m:[47, 47, 48, 39, 39], t:220, max:250, sub:subjects7th},
     {c:"7th", n:"Junaid-ul-Islam", p:"Shabir Ah. Hajam", m:[19, 30, 17, 28, 19], t:113, max:250, sub:subjects7th},
 
     // CLASS 8th
