Refactor subjects for 4th and 5th grades

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ function smartClean(t) { return t ? t.toLowerCase().trim().replace(/\bmohammad\b
 
 // SUBJECT LISTS
 const subjects1to3 = ["Nazirah + Tajweed", "Seerat + Mubadiyat"];
-const subjects4to5 = ["Nazirah", "Seerat", "Mubadiyat", "Tajveed"];
+const subjects4 = ["Nazirah", "Seerat", "Mubadiyat", "Tajveed"];
+const subjects5 = ["Nazirah", "Mubadiyat", "Seerat", "Tajveed"];
 const subjects6th = ["Nazirah", "Seerat", "Mubadiyat", "Fehmi-Quran", "Tajveed"];
 const subjects7th = ["Fahm-e-Quran", "Nazirah", "Seerat", "Mubadiyat", "Tajweed"];
 const subjectsSenior = ["Fahm-e-Quran", "Fahm-e-Hadees"];
@@ -159,7 +160,7 @@ const students = [
     {c:"5th", n:"Tajamul Islam", p:"Fayaz Ah. Malik", m:[43, 36, 46, 37], t:162, max:200, sub:subjects4to5},
     {c:"5th", n:"Sadiya Jan", p:"Javid Ah. Bhat", m:[27, 28, 19, 15], t:89, max:200, sub:subjects4to5},
     {c:"5th", n:"Sufiya Shabir", p:"Shabir Ah. Mir", m:[33, 38, 36, 29], t:136, max:200, sub:subjects4to5},
-    {c:"5th", n:"Sabia Shabir", p:"Shabir Ah. Mir", m:[46, 40, 41, 32], t:159, max:200, sub:subjects4to5},
+    {c:"5th", n:"Sobia Shabir", p:"Shabir Ah. Mir", m:[46, 40, 41, 32], t:159, max:200, sub:subjects4to5},
     {c:"5th", n:"Mohsin Manzoor", p:"Manzoor Ah. Mir", m:[16, 30, 14, 16], t:76, max:200, sub:subjects4to5},
     {c:"5th", n:"Imran Farooq", p:"Farooq Ah. Sheikh", m:[37, 30, 21, 10], t:98, max:200, sub:subjects4to5},
     {c:"5th", n:"Kamran Fayaz", p:"Fayaz Ah. Mir", m:[0, 14, 0, 4], t:18, max:200, sub:subjects4to5},
